# time_repport

./: .gitignore  .project  README.md
.dist-buildwrapper/: TimeRepport.cabal
src/: Main.hs
