name:           TimeRepport
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         mwikland

executable TimeRepport
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:  base >= 4, old-locale >= 1.0, time >= 1.4 ,split, MissingH >= 1.2, utf8-string
  ghc-options:     -Wall